Add CV upload functionality to application form: Implemented a new API endpoint for CV uploads, added validation for file type and size, and integrated CV upload in the application form with appropriate error handling and user feedback.

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -402,6 +402,10 @@
 			"tools": {
 				"label": "أقوى أدواتك",
 				"placeholder": "مثال: Figma، React، HubSpot..."
+			},
+			"cv": {
+				"label": "ارفع سيرتك الذاتية (PDF)",
+				"hint": "اختياري. الحد الأقصى 5 ميجابايت. صيغة PDF فقط."
 			}
 		},
 		"validation": {
@@ -410,7 +414,10 @@
 			"roleRequired": "اختار دور",
 			"englishLevelRequired": "اختار مستوى الإنكليزي",
 			"portfolioRequired": "حط رابط بورتفوليو أو حساب",
-			"shippedRequired": "احكي عن شغلك"
+			"shippedRequired": "احكي عن شغلك",
+			"cvMustBePDF": "السيرة الذاتية يجب أن تكون بصيغة PDF",
+			"cvTooLarge": "حجم الملف يجب أن يكون أقل من 5 ميجابايت",
+			"cvFilenameTooLong": "اسم الملف طويل جداً"
 		},
 		"submit": {
 			"button": "إرسال الطلب",
@@ -423,7 +430,8 @@
 		"errors": {
 			"rateLimit": "طلبات كتير. جرّب بعد دقيقة.",
 			"generic": "صار خطأ. جرّب مرة تانية.",
-			"network": "خطأ بالاتصال. تأكد من الإنترنت وجرّب مرة تانية."
+			"network": "خطأ بالاتصال. تأكد من الإنترنت وجرّب مرة تانية.",
+			"cvUploadFailed": "فشل رفع السيرة الذاتية. حاول مرة تانية."
 		},
 		"privacyNote": "بمجرّد ما تبعت الطلب، بتوافق إنّا نراجع معلوماتك ونتواصل معك بخصوص الفرص."
 	},
