Enhance dashboard with pagination: Implemented pagination for talents, companies, and hiring requests in the admin dashboard. Added a new Pagination component for better navigation and user experience. Updated translation files for Arabic and English to include pagination strings.

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1207,5 +1207,11 @@
 				"rejected": "مرفوض"
 			}
 		}
+	},
+	"pagination": {
+		"showing": "عرض {{start}}-{{end}} من {{total}}",
+		"previous": "السابق",
+		"next": "التالي",
+		"pageOf": "صفحة {{current}} من {{total}}"
 	}
 }
