--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1260,5 +1260,11 @@
 				"rejected": "Rejected"
 			}
 		}
+	},
+	"pagination": {
+		"showing": "Showing {{start}}-{{end}} of {{total}}",
+		"previous": "Previous",
+		"next": "Next",
+		"pageOf": "Page {{current}} of {{total}}"
 	}
 }
