Enhance top banners and navigation components: Updated the HireTopBanner and TopBanner components to include expandable functionality with animations. Added new translation strings for both Arabic and English to support the updated UI elements. Adjusted the positioning of navigation components for improved layout consistency.

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -8,7 +8,10 @@
 	},
 	"topBanner": {
 		"forCompanies": "عم تدوّر على موظفين؟ شوف Jeem للشركات",
-		"forTalent": "عم تدوّر على شغل؟ انضمّ لشبكة المواهب"
+		"forTalent": "عم تدوّر على شغل؟ انضمّ لشبكة المواهب",
+		"badge": "للشركات",
+		"title": "عم تدوّر على موظفين؟",
+		"subtitle": "← وصول لمواهب مختارة"
 	},
 	"nav": {
 		"links": {
@@ -472,6 +475,11 @@
 		"copyright": "© {{year}} Jeem. جميع الحقوق محفوظة."
 	},
 	"hire": {
+		"topBanner": {
+			"badge": "للمواهب",
+			"title": "عم تدوّر على شغل؟",
+			"subtitle": "← انضمّ لشبكة المواهب"
+		},
 		"nav": {
 			"badge": "للشركات",
 			"links": {
